--- a/main.html
+++ b/main.html
@@ -21,6 +21,7 @@
         <ul class="nav nav-pills">
           <li class="nav-item"><a href="main.html" class="nav-link active" aria-current="page">Главная</a></li>
           <li class="nav-item"><a href="projectGallery.html" class="nav-link">Галлерея</a></li>
+          <li class="nav-item"><a href="skills.html" class="nav-link">Умения</a></li>
           <li class="nav-item"><a href="#footer" class="nav-link">Контакты</a></li>
         </ul>
       </header>
@@ -98,7 +99,7 @@
       </ul>
     </footer>
   </div>
-  
+  </body>
 <!-- JS here -->
 <script src="js/vendor/jquery-1.12.4.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
