--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
     </div>
       <!-- about_me  -->
       <div class="about_me" style="margin-top: 10%; display: none;">
-        <div class="about_large_title d-none d-lg-block">
+        <div class="about_large_title d-none d-lg-block" onselectstart="return false" style="-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;">
                 About
         </div>
         <div class="container">
@@ -42,7 +42,7 @@
                 <div class="col-xl-6 col-md-6">
                     <div class="about_img">
                         <div class="my_Pic">
-                                <img src="img/kachok-s-noutbukom-mem-5.jpg" alt="a">
+                                <img src="img/selfPhoto.jpg" alt="a">
                         </div>
                     </div>
                 </div>
