--- a/projectGallery.html
+++ b/projectGallery.html
@@ -43,7 +43,7 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
-            <img src="img/kachok-s-noutbukom-mem-5.jpg" class="bd-placeholder-img card-img-top" role="img" alt="" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <img src="img/prostaja-neironnaja-set-izobrazhenie--504x422.png" class="bd-placeholder-img card-img-top" role="img" alt="" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
 
             <div class="card-body">
               <p class="card-text">Проект нейронной сети где каждый нейрон связан с каждым нейроном следующего слоя.</p>
@@ -57,7 +57,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img src="img/kachok-s-noutbukom-mem-5.jpg" class="bd-placeholder-img card-img-top" role="img" alt="" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <img src="img/tableSQLConv.png" class="bd-placeholder-img card-img-top" role="img" alt="" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
 
             <div class="card-body">
               <p class="card-text">Проект конвертера текста в SQL код для создания таблиц и шаблона их заполнения.</p>
@@ -71,7 +71,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img src="img/kachok-s-noutbukom-mem-5.jpg" class="bd-placeholder-img card-img-top" role="img" alt="" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <img src="img/portfpng.png" class="bd-placeholder-img card-img-top" role="img" alt="" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
 
             <div class="card-body">
               <p class="card-text">Проект данного сайта.</p>
@@ -86,7 +86,7 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <img src="img/kachok-s-noutbukom-mem-5.jpg" class="bd-placeholder-img card-img-top" role="img" alt="" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <img src="img/png-clipart-pipette-computer-icons-laboratory-euclidean-pipette-free-miscellaneous-glass-thumbnail.png" style="width: 50%;" class="bd-placeholder-img card-img-top" role="img" alt="" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
 
             <div class="card-body">
               <p class="card-text">Проект приложения для глобальной пипетки для определения 16-ричного представленя цвета в любой части экрана.</p>
@@ -100,7 +100,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img src="img/kachok-s-noutbukom-mem-5.jpg" class="bd-placeholder-img card-img-top" role="img" alt="" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <img src="img/RPGBot.png" class="bd-placeholder-img card-img-top" role="img" alt="" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
 
             <div class="card-body">
               <p class="card-text">Проект Telegram бот для игры на языке Python.</p>
@@ -114,7 +114,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img src="img/kachok-s-noutbukom-mem-5.jpg" class="bd-placeholder-img card-img-top" role="img" alt="" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <img src="img/RPGBot.png" class="bd-placeholder-img card-img-top" role="img" alt="" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
 
             <div class="card-body">
               <p class="card-text">Проект Telegram бот для игры на языке C#.</p>
@@ -129,7 +129,7 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <img src="img/kachok-s-noutbukom-mem-5.jpg" class="bd-placeholder-img card-img-top" role="img" alt="" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <img src="img/plotterBot.png" class="bd-placeholder-img card-img-top" role="img" alt="" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
 
             <div class="card-body">
               <p class="card-text">Проект Telegram бот для построения графиков на основе введенных данных на языке Python.</p>
